<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/connectionNameField"
        android:hint="@string/hint_connectionname"
        android:inputType="text|textNoSuggestions|textFilter"
        android:layout_alignParentStart="true"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hostNameField"
        android:hint="@string/hint_host"
        android:inputType="text|textNoSuggestions|textFilter"
        android:layout_below="@+id/connectionNameField"
        android:layout_alignParentStart="true"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:hint="@string/hint_username"
        android:inputType="text|textNoSuggestions|textFilter"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hostNameField"
        android:layout_alignParentStart="true"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/portField"
        android:hint="@string/hint_port"
        android:inputType="number"
        android:layout_below="@+id/usernameField"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/usernameField"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:hint="@string/hint_password"
        android:inputType="text|textPassword"
        android:layout_height="wrap_content"
        android:layout_below="@+id/portField"
        android:layout_alignParentEnd="true"
        android:importantForAutofill="no">
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/saveHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:layout_below="@+id/passwordField"
        android:layout_alignParentStart="true" />

</RelativeLayout>
