<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editcmd"
        android:hint="@string/hint_cmdname"
        android:inputType="text|textNoSuggestions|textFilter"
        android:layout_alignParentStart="true"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editexec"
        android:hint="@string/hint_command"
        android:inputType="text|textNoSuggestions|textFilter"
        android:layout_below="@+id/editcmd"
        android:layout_alignParentStart="true"
        android:importantForAutofill="no">
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/saveCmd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:layout_below="@+id/editexec"
        android:layout_alignParentStart="true" />

</RelativeLayout>
