<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    tools:context=".FrgListCmd">

    <ListView
        android:id="@+id/cmd_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_above="@+id/add_cmd"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/add_cmd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/button_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/preconfigured_cmd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/preconfigured"
        android:layout_alignParentBottom="true"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/del_cmd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:text="@string/button_delete"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap,RtlSymmetry" />

</RelativeLayout>
