<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrgRemote">

    <TextView
        android:id="@+id/tv_status_label"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:text="@string/textview_serverstatus"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/status_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.technodynamite.smarthome.ResultText
        android:id="@+id/status_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#fff"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="top|start"
        android:hint="@string/hint_serverstatus"
        android:inputType="textMultiLine"
        android:maxLines="12"
        android:singleLine="true"
        android:textColor="#000"
        android:textCursorDrawable="@null"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btn_showCmd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_label" />

    <Button
        android:id="@+id/btn_showCmd"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/button_showcmd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_result" />

</androidx.constraintlayout.widget.ConstraintLayout>
